--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [App]
     id = 27828165
     hash = 89e5cba66990e0913554e570417dac24
-    dev = [1872571604]
+    dev = [5652465292]
 [Token]
-    mybot = 123
-    signbot = 123
+    mybot = 5491689236:AAF_1AD8jjLZNrOyoW7DIQFDAj7KbefCngY
+    signbot = 6180679623:AAF_7-gOJcyYYwk5dz43PA2TmK4w1ZeLNYA
